re-align pages on mobile while using mobile browser / mobile app pages were being covered up by the top bar because it has a larger height, so all pages are readjusted to be fixed. also on criteria & navigate pages the buttons for the 'toolbar' (expand all & filter) were wonky so they are now fixed

--- a/src/pages/navigate/navigate.scss
+++ b/src/pages/navigate/navigate.scss
@@ -96,4 +96,31 @@ page-navigate {
          }
 
         }
+
+        @media screen and (max-width: 420px){
+            ion-content {
+                margin-top: 60px;
+
+                .filter-toolbar {
+
+                    button {
+                        width: 25%;
+                    }
+                    .filter-list {
+                        width: 60%;
+
+                        select {
+                            width: 20%;
+                        }
+
+                        .filter-it {
+                            width: 20%;
+                            font-size: .9em;
+                        }
+                    }
+                }
+
+
+            }
+        }
 }
