--- a/src/pages/notapplicable/notapplicable.scss
+++ b/src/pages/notapplicable/notapplicable.scss
@@ -25,4 +25,10 @@ page-notapplicable {
     .questions{
         display: flex;
     }
+
+    @media screen and (max-width: 420px){
+          ion-content {
+              margin-top: 40px;
+          }
+      }
 }
