--- a/src/pages/user-dashboard/user-dashboard.scss
+++ b/src/pages/user-dashboard/user-dashboard.scss
@@ -179,7 +179,7 @@ page-user-dashboard {
     }
 
     .first-bar{
-      margin: 110px auto 0 auto;
+      margin: 100px auto 0 auto;
       border-top: 1px solid gray;
     }
 
